objects/tffa__ExpectedActivity__c.object
<CustomObject>
    <description>Supports the capture of a list of account activity/usage which the customer needs to provide before opening the account. List of activities is fetched from activity checklist maintained for a product group, product code combination. Account activity generically applies to whenever a movement of funds (or something that has monetary value) takes place in an account, whatever the type of account.</description>
    <fields>
        <fullName>tffa__Application__c</fullName>
        <description>Reference to parent application</description>
        <label>Application</label>
        <referenceTo>tffa__Application__c</referenceTo>
        <relationshipLabel>Expected Activities</relationshipLabel>
        <relationshipName>ExpectedActivities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tffa__Code__c</fullName>
        <description>A logical identifier. Typically derived from QuestionTemplate.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__LongValue__c</fullName>
        <description>The full value of the answer captured in case it spans over 255 characters.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Long value</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <description>Relative order w.r.t others in the list.</description>
        <label>Sort order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__ValueName__c</fullName>
        <description>The display text for the answer captured. Useful when the answer is an item in a picklist. In such cases, item label is stored in this field for reference.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Value (text)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ValueType__c</fullName>
        <defaultValue>&quot;TEXT&quot;</defaultValue>
        <description>The type for the answer captured.</description>
        <label>Value type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__AnswerType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Value__c</fullName>
        <description>Value captured</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Expected Activity</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expected Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>